querylang/y.output

state 0
	$accept: .query $end 

	SELECT  shift 2
	DELETE  shift 3
	.  error

	query  goto 1

state 1
	$accept:  query.$end 

	$end  accept
	.  error


state 2
	query:  SELECT.selector whereClause SEMICOLON 
	query:  SELECT.selector SEMICOLON 
	query:  SELECT.dataClause whereClause SEMICOLON 

	DISTINCT  shift 8
	STATISTICAL  shift 10
	WINDOW  shift 12
	STATISTICS  shift 11
	CHANGED  shift 13
	DATA  shift 9
	LVALUE  shift 15
	ALL  shift 7
	.  error

	selector  goto 4
	tagList  goto 6
	dataClause  goto 5
	lvalue  goto 14

state 3
	query:  DELETE.dataClause whereClause SEMICOLON 
	query:  DELETE.whereClause SEMICOLON 

	STATISTICAL  shift 10
	WINDOW  shift 12
	STATISTICS  shift 11
	CHANGED  shift 13
	WHERE  shift 18
	DATA  shift 9
	.  error

	whereClause  goto 17
	dataClause  goto 16

state 4
	query:  SELECT selector.whereClause SEMICOLON 
	query:  SELECT selector.SEMICOLON 

	WHERE  shift 18
	SEMICOLON  shift 20
	.  error

	whereClause  goto 19

state 5
	query:  SELECT dataClause.whereClause SEMICOLON 

	WHERE  shift 18
	.  error

	whereClause  goto 21

state 6
	selector:  tagList.    (11)

	.  reduce 11 (src line 115)


state 7
	selector:  ALL.    (12)

	.  reduce 12 (src line 120)


state 8
	selector:  DISTINCT.lvalue 
	selector:  DISTINCT.    (14)

	LVALUE  shift 15
	.  reduce 14 (src line 129)

	lvalue  goto 22

state 9
	dataClause:  DATA.IN LPAREN timeref COMMA timeref RPAREN limit timeconv 
	dataClause:  DATA.IN timeref COMMA timeref limit timeconv 
	dataClause:  DATA.BEFORE timeref limit timeconv 
	dataClause:  DATA.AFTER timeref limit timeconv 

	BEFORE  shift 24
	AFTER  shift 25
	IN  shift 23
	.  error


state 10
	dataClause:  STATISTICAL.LPAREN NUMBER RPAREN DATA IN LPAREN timeref COMMA timeref RPAREN limit timeconv 

	LPAREN  shift 26
	.  error


state 11
	dataClause:  STATISTICS.LPAREN NUMBER RPAREN DATA IN LPAREN timeref COMMA timeref RPAREN limit timeconv 

	LPAREN  shift 27
	.  error


state 12
	dataClause:  WINDOW.LPAREN NUMBER lvalue RPAREN DATA IN LPAREN timeref COMMA timeref RPAREN limit timeconv 

	LPAREN  shift 28
	.  error


state 13
	dataClause:  CHANGED.LPAREN NUMBER COMMA NUMBER COMMA NUMBER RPAREN DATA 

	LPAREN  shift 29
	.  error


state 14
	tagList:  lvalue.    (6)
	tagList:  lvalue.COMMA tagList 

	COMMA  shift 30
	.  reduce 6 (src line 90)


state 15
	lvalue:  LVALUE.    (48)

	.  reduce 48 (src line 362)


state 16
	query:  DELETE dataClause.whereClause SEMICOLON 

	WHERE  shift 18
	.  error

	whereClause  goto 31

state 17
	query:  DELETE whereClause.SEMICOLON 

	SEMICOLON  shift 32
	.  error


state 18
	whereClause:  WHERE.whereList 

	LVALUE  shift 15
	MATCHES  shift 38
	HAS  shift 37
	NOT  shift 34
	LPAREN  shift 40
	LBRACK  shift 41
	.  error

	whereList  goto 33
	whereTerm  goto 35
	valueListBrack  goto 39
	lvalue  goto 36

state 19
	query:  SELECT selector whereClause.SEMICOLON 

	SEMICOLON  shift 42
	.  error


state 20
	query:  SELECT selector SEMICOLON.    (2)

	.  reduce 2 (src line 65)


state 21
	query:  SELECT dataClause whereClause.SEMICOLON 

	SEMICOLON  shift 43
	.  error


state 22
	selector:  DISTINCT lvalue.    (13)

	.  reduce 13 (src line 124)


state 23
	dataClause:  DATA IN.LPAREN timeref COMMA timeref RPAREN limit timeconv 
	dataClause:  DATA IN.timeref COMMA timeref limit timeconv 

	NOW  shift 49
	QSTRING  shift 50
	LPAREN  shift 44
	NUMBER  shift 47
	.  error

	timeref  goto 45
	abstime  goto 46
	qstring  goto 48

state 24
	dataClause:  DATA BEFORE.timeref limit timeconv 

	NOW  shift 49
	QSTRING  shift 50
	NUMBER  shift 47
	.  error

	timeref  goto 51
	abstime  goto 46
	qstring  goto 48

state 25
	dataClause:  DATA AFTER.timeref limit timeconv 

	NOW  shift 49
	QSTRING  shift 50
	NUMBER  shift 47
	.  error

	timeref  goto 52
	abstime  goto 46
	qstring  goto 48

state 26
	dataClause:  STATISTICAL LPAREN.NUMBER RPAREN DATA IN LPAREN timeref COMMA timeref RPAREN limit timeconv 

	NUMBER  shift 53
	.  error


state 27
	dataClause:  STATISTICS LPAREN.NUMBER RPAREN DATA IN LPAREN timeref COMMA timeref RPAREN limit timeconv 

	NUMBER  shift 54
	.  error


state 28
	dataClause:  WINDOW LPAREN.NUMBER lvalue RPAREN DATA IN LPAREN timeref COMMA timeref RPAREN limit timeconv 

	NUMBER  shift 55
	.  error


state 29
	dataClause:  CHANGED LPAREN.NUMBER COMMA NUMBER COMMA NUMBER RPAREN DATA 

	NUMBER  shift 56
	.  error


state 30
	tagList:  lvalue COMMA.tagList 

	LVALUE  shift 15
	.  error

	tagList  goto 57
	lvalue  goto 14

state 31
	query:  DELETE dataClause whereClause.SEMICOLON 

	SEMICOLON  shift 58
	.  error


state 32
	query:  DELETE whereClause SEMICOLON.    (5)

	.  reduce 5 (src line 82)


state 33
	whereClause:  WHERE whereList.    (37)
	whereList:  whereList.AND whereTerm 
	whereList:  whereList.OR whereTerm 

	AND  shift 59
	OR  shift 60
	.  reduce 37 (src line 310)


state 34
	whereList:  NOT.whereTerm 

	LVALUE  shift 15
	MATCHES  shift 38
	HAS  shift 37
	LPAREN  shift 40
	LBRACK  shift 41
	.  error

	whereTerm  goto 61
	valueListBrack  goto 39
	lvalue  goto 36

state 35
	whereList:  whereTerm.    (52)

	.  reduce 52 (src line 386)


state 36
	whereTerm:  lvalue.LIKE qstring 
	whereTerm:  lvalue.EQ qstring 
	whereTerm:  lvalue.EQ NUMBER 
	whereTerm:  lvalue.NEQ qstring 

	EQ  shift 63
	NEQ  shift 64
	LIKE  shift 62
	.  error


state 37
	whereTerm:  HAS.lvalue 

	LVALUE  shift 15
	.  error

	lvalue  goto 65

state 38
	whereTerm:  MATCHES.qstring 

	QSTRING  shift 50
	.  error

	qstring  goto 66

state 39
	whereTerm:  valueListBrack.IN lvalue 
	whereTerm:  valueListBrack.NOT IN lvalue 

	NOT  shift 68
	IN  shift 67
	.  error


state 40
	whereTerm:  LPAREN.whereTerm RPAREN 

	LVALUE  shift 15
	MATCHES  shift 38
	HAS  shift 37
	LPAREN  shift 40
	LBRACK  shift 41
	.  error

	whereTerm  goto 69
	valueListBrack  goto 39
	lvalue  goto 36

state 41
	valueListBrack:  LBRACK.valueList RBRACK 

	QSTRING  shift 50
	.  error

	valueList  goto 70
	qstring  goto 71

state 42
	query:  SELECT selector whereClause SEMICOLON.    (1)

	.  reduce 1 (src line 59)


state 43
	query:  SELECT dataClause whereClause SEMICOLON.    (3)

	.  reduce 3 (src line 70)


state 44
	dataClause:  DATA IN LPAREN.timeref COMMA timeref RPAREN limit timeconv 

	NOW  shift 49
	QSTRING  shift 50
	NUMBER  shift 47
	.  error

	timeref  goto 72
	abstime  goto 46
	qstring  goto 48

state 45
	dataClause:  DATA IN timeref.COMMA timeref limit timeconv 

	COMMA  shift 73
	.  error


state 46
	timeref:  abstime.    (23)
	timeref:  abstime.reltime 

	NUMBER  shift 75
	.  reduce 23 (src line 194)

	reltime  goto 74

state 47
	abstime:  NUMBER.LVALUE 
	abstime:  NUMBER.    (26)

	LVALUE  shift 76
	.  reduce 26 (src line 212)


state 48
	abstime:  qstring.    (27)

	.  reduce 27 (src line 220)


state 49
	abstime:  NOW.    (28)

	.  reduce 28 (src line 236)


state 50
	qstring:  QSTRING.    (47)

	.  reduce 47 (src line 356)


state 51
	dataClause:  DATA BEFORE timeref.limit timeconv 
	limit: .    (31)

	LIMIT  shift 78
	STREAMLIMIT  shift 79
	.  reduce 31 (src line 260)

	limit  goto 77

state 52
	dataClause:  DATA AFTER timeref.limit timeconv 
	limit: .    (31)

	LIMIT  shift 78
	STREAMLIMIT  shift 79
	.  reduce 31 (src line 260)

	limit  goto 80

state 53
	dataClause:  STATISTICAL LPAREN NUMBER.RPAREN DATA IN LPAREN timeref COMMA timeref RPAREN limit timeconv 

	RPAREN  shift 81
	.  error


state 54
	dataClause:  STATISTICS LPAREN NUMBER.RPAREN DATA IN LPAREN timeref COMMA timeref RPAREN limit timeconv 

	RPAREN  shift 82
	.  error


state 55
	dataClause:  WINDOW LPAREN NUMBER.lvalue RPAREN DATA IN LPAREN timeref COMMA timeref RPAREN limit timeconv 

	LVALUE  shift 15
	.  error

	lvalue  goto 83

state 56
	dataClause:  CHANGED LPAREN NUMBER.COMMA NUMBER COMMA NUMBER RPAREN DATA 

	COMMA  shift 84
	.  error


state 57
	tagList:  lvalue COMMA tagList.    (7)

	.  reduce 7 (src line 94)


state 58
	query:  DELETE dataClause whereClause SEMICOLON.    (4)

	.  reduce 4 (src line 76)


state 59
	whereList:  whereList AND.whereTerm 

	LVALUE  shift 15
	MATCHES  shift 38
	HAS  shift 37
	LPAREN  shift 40
	LBRACK  shift 41
	.  error

	whereTerm  goto 85
	valueListBrack  goto 39
	lvalue  goto 36

state 60
	whereList:  whereList OR.whereTerm 

	LVALUE  shift 15
	MATCHES  shift 38
	HAS  shift 37
	LPAREN  shift 40
	LBRACK  shift 41
	.  error

	whereTerm  goto 86
	valueListBrack  goto 39
	lvalue  goto 36

state 61
	whereList:  NOT whereTerm.    (51)

	.  reduce 51 (src line 378)


state 62
	whereTerm:  lvalue LIKE.qstring 

	QSTRING  shift 50
	.  error

	qstring  goto 87

state 63
	whereTerm:  lvalue EQ.qstring 
	whereTerm:  lvalue EQ.NUMBER 

	QSTRING  shift 50
	NUMBER  shift 89
	.  error

	qstring  goto 88

state 64
	whereTerm:  lvalue NEQ.qstring 

	QSTRING  shift 50
	.  error

	qstring  goto 90

state 65
	whereTerm:  HAS lvalue.    (42)

	.  reduce 42 (src line 333)


state 66
	whereTerm:  MATCHES qstring.    (43)

	.  reduce 43 (src line 337)


state 67
	whereTerm:  valueListBrack IN.lvalue 

	LVALUE  shift 15
	.  error

	lvalue  goto 91

state 68
	whereTerm:  valueListBrack NOT.IN lvalue 

	IN  shift 92
	.  error


state 69
	whereTerm:  LPAREN whereTerm.RPAREN 

	RPAREN  shift 93
	.  error


state 70
	valueListBrack:  LBRACK valueList.RBRACK 

	RBRACK  shift 94
	.  error


state 71
	valueList:  qstring.    (9)
	valueList:  qstring.COMMA valueList 

	COMMA  shift 95
	.  reduce 9 (src line 105)


state 72
	dataClause:  DATA IN LPAREN timeref.COMMA timeref RPAREN limit timeconv 

	COMMA  shift 96
	.  error


state 73
	dataClause:  DATA IN timeref COMMA.timeref limit timeconv 

	NOW  shift 49
	QSTRING  shift 50
	NUMBER  shift 47
	.  error

	timeref  goto 97
	abstime  goto 46
	qstring  goto 48

state 74
	timeref:  abstime reltime.    (24)

	.  reduce 24 (src line 198)


state 75
	reltime:  NUMBER.lvalue 
	reltime:  NUMBER.lvalue reltime 

	LVALUE  shift 15
	.  error

	lvalue  goto 98

state 76
	abstime:  NUMBER LVALUE.    (25)

	.  reduce 25 (src line 204)


state 77
	dataClause:  DATA BEFORE timeref limit.timeconv 
	timeconv: .    (35)

	AS  shift 100
	.  reduce 35 (src line 294)

	timeconv  goto 99

state 78
	limit:  LIMIT.NUMBER 
	limit:  LIMIT.NUMBER STREAMLIMIT NUMBER 

	NUMBER  shift 101
	.  error


state 79
	limit:  STREAMLIMIT.NUMBER 

	NUMBER  shift 102
	.  error


state 80
	dataClause:  DATA AFTER timeref limit.timeconv 
	timeconv: .    (35)

	AS  shift 100
	.  reduce 35 (src line 294)

	timeconv  goto 103

state 81
	dataClause:  STATISTICAL LPAREN NUMBER RPAREN.DATA IN LPAREN timeref COMMA timeref RPAREN limit timeconv 

	DATA  shift 104
	.  error


state 82
	dataClause:  STATISTICS LPAREN NUMBER RPAREN.DATA IN LPAREN timeref COMMA timeref RPAREN limit timeconv 

	DATA  shift 105
	.  error


state 83
	dataClause:  WINDOW LPAREN NUMBER lvalue.RPAREN DATA IN LPAREN timeref COMMA timeref RPAREN limit timeconv 

	RPAREN  shift 106
	.  error


state 84
	dataClause:  CHANGED LPAREN NUMBER COMMA.NUMBER COMMA NUMBER RPAREN DATA 

	NUMBER  shift 107
	.  error


state 85
	whereList:  whereList AND whereTerm.    (49)

	.  reduce 49 (src line 370)


state 86
	whereList:  whereList OR whereTerm.    (50)

	.  reduce 50 (src line 374)


state 87
	whereTerm:  lvalue LIKE qstring.    (38)

	.  reduce 38 (src line 317)


state 88
	whereTerm:  lvalue EQ qstring.    (39)

	.  reduce 39 (src line 321)


state 89
	whereTerm:  lvalue EQ NUMBER.    (40)

	.  reduce 40 (src line 325)


state 90
	whereTerm:  lvalue NEQ qstring.    (41)

	.  reduce 41 (src line 329)


state 91
	whereTerm:  valueListBrack IN lvalue.    (44)

	.  reduce 44 (src line 342)


state 92
	whereTerm:  valueListBrack NOT IN.lvalue 

	LVALUE  shift 15
	.  error

	lvalue  goto 108

state 93
	whereTerm:  LPAREN whereTerm RPAREN.    (46)

	.  reduce 46 (src line 350)


state 94
	valueListBrack:  LBRACK valueList RBRACK.    (8)

	.  reduce 8 (src line 100)


state 95
	valueList:  qstring COMMA.valueList 

	QSTRING  shift 50
	.  error

	valueList  goto 109
	qstring  goto 71

state 96
	dataClause:  DATA IN LPAREN timeref COMMA.timeref RPAREN limit timeconv 

	NOW  shift 49
	QSTRING  shift 50
	NUMBER  shift 47
	.  error

	timeref  goto 110
	abstime  goto 46
	qstring  goto 48

state 97
	dataClause:  DATA IN timeref COMMA timeref.limit timeconv 
	limit: .    (31)

	LIMIT  shift 78
	STREAMLIMIT  shift 79
	.  reduce 31 (src line 260)

	limit  goto 111

state 98
	reltime:  NUMBER lvalue.    (29)
	reltime:  NUMBER lvalue.reltime 

	NUMBER  shift 75
	.  reduce 29 (src line 242)

	reltime  goto 112

state 99
	dataClause:  DATA BEFORE timeref limit timeconv.    (21)

	.  reduce 21 (src line 184)


state 100
	timeconv:  AS.LVALUE 

	LVALUE  shift 113
	.  error


state 101
	limit:  LIMIT NUMBER.    (32)
	limit:  LIMIT NUMBER.STREAMLIMIT NUMBER 

	STREAMLIMIT  shift 114
	.  reduce 32 (src line 264)


state 102
	limit:  STREAMLIMIT NUMBER.    (33)

	.  reduce 33 (src line 272)


state 103
	dataClause:  DATA AFTER timeref limit timeconv.    (22)

	.  reduce 22 (src line 188)

